--- a/app/assets/stylesheets/stores.css.scss
+++ b/app/assets/stylesheets/stores.css.scss
@@ -66,13 +66,17 @@
   }
 
   &[data-action='index'] {
-  @media screen and (max-width: 767px) {
-    #stores {
-      tr th:nth-of-type(4), tr td:nth-of-type(4),
-      tr th:nth-of-type(5), tr td:nth-of-type(5) {
-        display: none;
+    @media screen and (max-width: 767px) {
+      #stores {
+        tr th:nth-of-type(4), tr td:nth-of-type(4),
+        tr th:nth-of-type(5), tr td:nth-of-type(5) {
+          display: none;
+        }
       }
     }
   }
-}
+
+  .btn[data-id='store_icon'] {
+    color: #555;
+  }
 }
